static/styles.css
@media (prefers-color-scheme: light) {

    html,
    body {
        color: #161616;
        background-color: #ffffff;
    }

    small {
        color: #0a58ca;
    }

    .FunnyGif {
        filter: invert(0);
    }


    a {
        color: #0a58ca;
    }

    a:hover {
        color: tomato;
    }

    .Psswrd__view {
        background-color: #eeeeee;
        color: #161616;
    }

    .Psswrd__view:focus-visible {
        outline: 1px solid #161616;
    }

    .PsswrdOption:hover {
        background-color: #eeeeee;
    }
}

@media (prefers-color-scheme: dark) {

    html,
    body {
        color: #eeeeee;
        background-color: #000000;
    }

    small {
        color: tomato;
    }

    .FunnyGif {
        filter: invert(1);
    }


    a {
        color: tomato;
    }

    a:hover {
        color: greenyellow;
    }

    .Psswrd__view {
        background-color: #141414;
        color: white;
    }

    .Psswrd__view:focus-visible {
        outline: 1px solid #ffffff;
    }

    .PsswrdOption:hover {
        background-color: #141414;
    }
}

.TheTitle {
    cursor: pointer;
    display: inline-flex;
    position: relative;
    /* transform: scale(0.7) */
}

.TheTitle::before {
    content: "beta";
    position: absolute;
    top: 10px;
    left: 4px;
    font-size: xx-small;
}

.Vowel {
    width: 21.5px;
    color: tomato;
    animation-name: LoopText;
    animation-duration: 14s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    display: inline-block;
    opacity: 1;
    animation-direction: reverse;
}

.TheTitle::after {
    content: ".com";
    animation-name: LoopTextURL;
    animation-duration: 14s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
    opacity: 0;
    animation-direction: reverse;
    position: absolute;
}

@keyframes LoopText {
    0% {
        width: 21.5px;
        opacity: 1;
        display: inline-block;
    }

    15% {
        width: 0px;
        opacity: 0;
        display: none;
    }

    25% {
        width: 0px;
        opacity: 0;
        display: none;
    }

    50% {
        width: 0px;
        opacity: 0;
        display: none;
    }

    65% {
        width: 0px;
        opacity: 0;
        display: none;
    }

    75% {
        width: 21.5px;
        opacity: 1;
        display: inline-block;
    }

    100% {
        width: 21.5px;
        opacity: 1;
        display: inline-block;
    }
}

@keyframes LoopTextURL {
    0% {
        display: none;
        opacity: 0;
    }


    15% {
        display: none;
        opacity: 0;
    }

    25% {
        opacity: 1;
        display: inline-block;
        position: initial;
    }

    50% {
        opacity: 1;
        display: inline-block;
        position: initial;
    }

    65% {
        display: none;
        opacity: 0;
    }

    75% {
        display: none;
        opacity: 0;
    }

    100% {
        display: none;
        opacity: 0;
    }
}

.Psswrd {
    position: relative;
    display: flex;
}

.Psswrd__view {
    width: 100%;
    height: 100px;
    border-radius: 4px;
    border: 0;
    padding: 16px;
    text-align: center;
    margin-right: 14px;
    /* overflow: hidden;
    word-break: break-all;
    display: table-cell;
    vertical-align: middle;  these only work for textarea*/
    font-size: x-large;
}

.Psswrd__copy {
    position: absolute;
    right: 0;
    top: 0;
}

.PsswrdOptions {
    position: relative;
    margin-bottom: 16px;
    /* opacity: 0.3; */
}

/* The PsswrdOption */
.PsswrdOption {
    display: flex;
    flex-direction: row;
    align-items: center;
    position: relative;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    border-radius: 4px;
}

.PsswrdOption .PsswrdOption__inputbox {
    cursor: pointer;
    height: 24px;
    width: 24px;
    margin-right: 16px;
}

/* not working */
.PsswrdOption input:checked .PsswrdOption__inputbox {
    background-color: tomato;
    border-color: tomato;
}

.Psswrd__copy {
    position: relative;
    display: inline-block;
}

.Psswrd__copy .Psswrd__tooltip {
    visibility: hidden;
    width: 140px;
    background-color: #555;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    z-index: 1;
    bottom: 150%;
    left: 50%;
    margin-left: -75px;
    opacity: 0;
    transition: opacity 0.3s;
}

.Psswrd__copy .Psswrd__tooltip::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
}

.Psswrd__copy:hover .Psswrd__tooltip {
    visibility: visible;
    opacity: 1;
}

.PsswrdOptionBasic {
    display: flex;
    flex-direction: column;
    position: relative;
    align-items: center;
    text-align: center;
}

.PsswrdOptionBasic__range {
    width: 80%;
    cursor: pointer;
}


code a {
    text-decoration: none;
}

kbd {
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
    color: #333;
    display: inline-block;
    font-size: .85em;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
}

.UsageTips {}

/* Bootstrap Overides */
.btn, button {
    box-shadow: none !important;
}

a {
    text-decoration: none;
}

.container {
    min-width: 425px;
    /* max-width: 960px; */
}

